Feature/storm 31 (#36)
* Make Kotlin a first-class citizen.
* Process undefined mode as select.
* Clean up code and dependencies.
* Clients now need to explicitly include storm-core module.
* Clean up Metamodel use.
* Clean up class visibility.
* Add receiver function variant for exists and notExists queries.
* Add template support to predicate builder.
* Add whereExists to query builder.
* Let default function invocation work in case of proxied sub-interfaces.
* Add validator project for kotlin.
* Add SqlLogger.
* Add Ref serializer/deserializer for JSON.
* Set Kotlin version to 2.0.21 for max compatibility.
* Improve exception handling.
* Improve TemplateString method naming.
* Improve error message in case of accidental @FK usage.
* Improve error message in case of accidental @FK usage.
* Improve predicate builder type propagation.
* Improve predicate parenthesis usage.
* Improve record validation.
* Fix model retrieval api for Kotlin.
* Fix issue where a foreign key is an entity which primary key is a foreign key.
* Fix issue where a foreign key is an entity which primary key is a foreign key.
* Fix template string parenthesis wrapping.
* Fix Kotlin Qualifier resolver.
* Update documentation.
Relates to #31