@@ -6,7 +6,7 @@
     <parent>
         <groupId>st.orm</groupId>
         <artifactId>storm-framework</artifactId>
-        <version>1.3.8</version>
+        <version>1.4.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>storm-json</artifactId>
@@ -37,11 +37,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --enable-preview
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens storm/st.orm=ALL-UNNAMED
-                        --add-opens=storm.json/st.orm.json=storm
-                        --add-opens=storm.json/st.orm.json.model=storm
+                        --add-opens=storm.json/st.orm.json=storm.core
+                        --add-opens=storm.json/st.orm.json.model=storm.core
                         --add-opens=storm.json/st.orm.json=com.fasterxml.jackson.databind
                         --add-opens=storm.json/st.orm.json.model=com.fasterxml.jackson.databind
                     </argLine>
@@ -52,8 +51,14 @@
     <dependencies>
         <dependency>
             <groupId>st.orm</groupId>
-            <artifactId>storm</artifactId>
+            <artifactId>storm-foundation</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>st.orm</groupId>
+            <artifactId>storm-core</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
