@@ -6,7 +6,7 @@
     <parent>
         <groupId>st.orm</groupId>
         <artifactId>storm-framework</artifactId>
-        <version>1.3.8</version>
+        <version>1.4.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>storm-postgresql</artifactId>
@@ -37,10 +37,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --enable-preview
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens storm.postgresql/st.orm.spi.postgresql=ALL-UNNAMED
-                        --add-opens storm.postgresql/st.orm.spi.postgresql=storm
+                        --add-opens storm.postgresql/st.orm.spi.postgresql=storm.core
                     </argLine>
                 </configuration>
             </plugin>
@@ -75,7 +74,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -83,7 +81,13 @@
     <dependencies>
         <dependency>
             <groupId>st.orm</groupId>
-            <artifactId>storm</artifactId>
+            <artifactId>storm-foundation</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>st.orm</groupId>
+            <artifactId>storm-core</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
